--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
+    "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.1",
     "style-loader": "^1.2.1",
