--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.1.0",
     "typewriter-effect": "^2.13.0"
   }
